--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ exposed-version = "0.53.0"
 h2-version = "2.2.224"
 compose-plugin = "1.7.0"
 postgres-version = "42.7.4"
+multiplatform-settings-version = "1.2.0"
 
 [libraries]
 ktor-server-core = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor-version" }
@@ -27,7 +28,11 @@ postgresql = { module = "org.postgresql:postgresql", version.ref = "postgres-ver
 
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor-version"}
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor-version" }
+ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor-version"}
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor-version" }
+
+russhwolf-multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatform-settings-version" }
+
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin-version" }
